# myUplink2mqtt

./: .dockerignore  .env.example  .gitignore  .ruff.toml  .vscode-settings-template.json  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
.github/prompts/: readme-blueprint-generator.prompt.md
configs/mosquitto/: mosquitto.conf
demo/: compare_waterflow_data.py  demo_domoticz_auth_diagnostic.py  demo_domoticz_autodiscovery.py  demo_domoticz_json.py  demo_domoticz_test_credentials.py  demo_enum_parameters.py  demo_get_all_points.py  demo_get_names.py  demo_get_overview.py  demo_ping.py  demo_save.py  demo_specific_points.py  demo_systems_me.py  demo_water_flow_debug.py  demo_water_flow_history.py  diagnose_flow_scaling.py  domoticz_autodiscovery.py  mqtt_connect.py  mqtt_list_topics.py  myuplink_diagnose_flow_scaling.py  myuplink_enum_parameters.py  myuplink_get_all_points.py  myuplink_get_names.py  myuplink_get_overview.py  myuplink_ping.py  myuplink_save_data.py  myuplink_specific_points.py  myuplink_systems_me.py
docker/: Dockerfile  docker-compose.yml
docs/: DEMO_GUIDE.md  DOCKER_COMPOSE_GUIDE.md  DOCKER_QUICK_REFERENCE.md  DOCKER_QUICK_START.md  DOMOTICZ_AUTODISCOVERY.md  DOMOTICZ_JSON_UTIL.md
myuplink2mqtt/: __init__.py  __main__.py  clear_mqtt_discovery.py  main.py
myuplink2mqtt/utils/: __init__.py  auto_discovery_utils.py  domoticz_json_util.py  myuplink_utils.py
scripts/: clear_mqtt_discovery.py  install_docker_stack.sh  install_service.sh  myuplink2mqtt.service  request_token.py  uninstall_service.sh  verify_docker_setup.sh  verify_setup.sh
tests/: README.md  __init__.py  conftest.py  pytest.ini  test_auto_discovery.py  test_mqtt.py  test_utilities.py
